<resources>
    <string name="app_name">Day Palette</string>
    <string name="future_holidays_in">Future holidays in</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="memories">Memories</string>

    <!--    Error messages mapped to enums-->

    <string name="error_no_response">No response received from the server.</string>
    <string name="error_no_internet">No internet connection available.</string>
    <string name="error_request_timeout">The request has timed out.</string>
    <string name="error_internal_error">Internal server is not responding</string>
    <string name="error_payload_too_large">The payload is too large to process.</string>
    <string name="error_unknown">An unknown error has occurred.</string>
    <string name="error_not_data_found">No data found.</string>
    <string name="search_country">Search country</string>

    <!--    titles-->
    <string name="next_week_s_holidays_worldwide">Next Week\'s Holidays Worldwide</string>

    <!--    Content descriptions-->
    <string name="desc_close_button">Close button</string>
    <string name="desc_share_button">Share button</string>
    <string name="desc_camera_button">Camera button</string>
    <string name="desc_help_button">Help button</string>

    <string name="global">Global</string>
    <string name="regional">Regional</string>
    <string name="holiday_description">
        On %1$s, the %2$s holiday, also known as %3$s, is celebrated in %4$s. This is %5$s Public holiday and is observed %6$s.
    </string>
    <string name="a">a</string>
    <string name="not_a">not a</string>
    <string name="globally">globally</string>
    <string name="locally">locally</string>

</resources>